--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/load-preferences-dialog/load-preferences-dialog.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/load-preferences-dialog/load-preferences-dialog.component.html
@@ -1,25 +1,22 @@
-<div mat-dialog-title class="dialog-title">
-  <h3>{{ 'CHART_ON_DEMAND.LOAD_PREFERENCES.TITLE' | oChartTranslate }}</h3>
-</div>
-<mat-dialog-content fxLayout="column" class="dialog-content-preferences">
-  <div mat-subheader class="subheader">{{ 'TABLE.DIALOG.APPLY_CONFIGURATION' | oTranslate }}</div>
+<span mat-dialog-title>{{ 'TABLE.BUTTONS.APPLY_CONFIGURATION' | oTranslate }}</span>
+<mat-dialog-content fxLayout="column">
+  <div mat-subheader>{{ 'TABLE.DIALOG.APPLY_CONFIGURATION' | oTranslate }}</div>
   <mat-selection-list #configurationList dense class="apply-configuration-dialog-list">
-    <mat-list-option checkboxPosition="before">
-      <span matLine>NAME</span>
-      <span matLine>DESCRIPTION</span>
+    <mat-list-option (click)="onClickConfigurationList(configuration)" checkboxPosition="before" *ngFor="let configuration of configurationListData"
+      [value]="configuration">
+      <span matLine>{{ configuration.NAME }}</span>
+      <span matLine>{{ configuration.DESCRIPTION }}</span>
     </mat-list-option>
   </mat-selection-list>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-  <button type="button" mat-stroked-button
-    [disabled]="configurationList.selectedOptions.selected.length!==1" class="o-button-danger">
+  <button type="button" (click)="remove()" mat-stroked-button [disabled]="configurationList.selectedOptions.selected.length!==1"
+    class="o-button-danger">
     {{ 'DELETE' | oTranslate }}
   </button>
   <span fxFlex></span>
-  <button type="button" mat-stroked-button [mat-dialog-close]="false" class="o-button-default">{{ 'CANCEL' | oTranslate
-    }}</button>
-  <button type="button" mat-stroked-button [mat-dialog-close]="true"
-    [disabled]="configurationList.selectedOptions.selected.length!==1" class="o-button-primary">{{ 'OK' | oTranslate
-    }}</button>
+  <button type="button" mat-stroked-button [mat-dialog-close]="false" class="o-button-default">{{ 'CANCEL' | oTranslate }}</button>
+  <button type="button" (click)="loadConfiguration()" mat-stroked-button [mat-dialog-close]="true"
+    [disabled]="configurationList.selectedOptions.selected.length!==1" class="o-button-primary">{{ 'OK' | oTranslate}}</button>
 </mat-dialog-actions>
