--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
@@ -1,6 +1,5 @@
-
-.mat-sidenav-container{
-  background-color:#ffffff;
+.mat-sidenav-container {
+  background-color: #ffffff;
   transition: all 0.5s;
 }
 
@@ -11,13 +10,14 @@
   box-shadow: 0px 2px 4px #00000029;
 }
 
-.sidenav-container-content{
+.sidenav-container-content {
   background-color: #ffffff;
   border-radius: 4px;
   border: 1px solid #dddddd;
   box-shadow: 0px 2px 4px #00000029;
   height: 100%;
   margin-left: 0px;
+
   &.opened {
     margin-left: 24px;
   }
@@ -30,27 +30,33 @@
   visibility: visible !important;
   z-index: 999;
   border: 0;
+
   .o-form {
     display: none;
+
     .section-title {
       margin-top: 24px;
       font-weight: bold;
       text-transform: uppercase;
       font-size: 12px;
     }
+
     .radio-selection {
       overflow: hidden;
     }
   }
+
   &.mat-drawer-side {
     transform: none;
   }
+
   &.mat-drawer-opened {
     border: 1px solid #DEE1E6;
     border-radius: 4px;
     top: 0;
     left: 0;
     padding: 8px 16px;
+
     .o-form {
       display: block;
     }
@@ -64,32 +70,41 @@
 .dialog-title {
   position: relative;
   border-bottom: 1px solid #1464a5;
+
   h2 {
     font-size: 16px;
   }
+
   .main-menu {
     position: absolute;
     top: -5px;
     right: 0;
+
     button {
       margin-left: 18px;
       height: 19px;
       width: 19px;
       line-height: 19px;
+
       .mat-icon {
         height: 19px;
         width: 19px;
       }
     }
-    .active { color: #1464a5; }
+
+    .active {
+      color: #1464a5;
+    }
   }
 }
 
 .dialog-content {
   height: 100%;
   max-height: calc(100% - 77px);
+
   .mat-sidenav-container {
     flex: none;
+
     svg {
       margin: 24px;
       width: calc(100% - 48px);
@@ -100,5 +115,16 @@
       left: 50%;
       transform: translate(-50%, -50%);
     }
+
+    .title {
+      margin-left: 60px;
+      margin-bottom: 4px;
+    }
+
+    .subtitle {
+      margin-top: 0;
+      margin-left: 60px;
+    }
+
   }
 }
