--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
@@ -1,5 +1,5 @@
 .mat-sidenav-container {
-  background-color: #ffffff;
+  background-color: transparent;
   transition: all 0.5s;
 }
 
@@ -10,8 +10,12 @@
   box-shadow: 0px 2px 4px #00000029;
 }
 
+.title-sidenav-content {
+  background-color: white;
+}
+
 .sidenav-container-content {
-  background-color: #ffffff;
+  //background-color: #ffffff;
   border-radius: 4px;
   border: 1px solid #dddddd;
   box-shadow: 0px 2px 4px #00000029;
@@ -22,6 +26,7 @@
     margin-left: 24px;
   }
 }
+
 
 .mat-sidenav {
   min-width: 10%;
