--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
@@ -1,10 +1,10 @@
 <div mat-dialog-title class="dialog-title" fxLayout="row" fxLayoutAlign="space-between center">
-  <h2>{{ 'CHART_ON_DEMAND.CHART_ON_DEMAND_TITLE' | oChartTranslate }}</h2>
-  <div class="main-menu">
+  <h2 class="chart_title">{{ 'CHART_ON_DEMAND.CHART_ON_DEMAND_TITLE' | oChartTranslate }}</h2>
+  <div>
     <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="settings dialog" (click)="showConfigurationMenu()">
       <mat-icon>settings</mat-icon>
     </button>
-    <mat-menu #menu="matMenu">
+    <mat-menu #menu="matMenu" class="o-mat-menu">
       <button mat-menu-item [disabled]="!appliedConfiguration" (click)="updatePreferences()">
         <span>{{ 'CHART_ON_DEMAND.SAVE_CONFIGURATION_BUTTON' | oChartTranslate }}</span>
       </button>
@@ -28,70 +28,73 @@
   </div>
 </div>
 
-<div mat-dialog-content class="dialog-container">
-  <mat-sidenav-container class="mat-sidenav-container" fxFill>
-    <mat-sidenav #sidenav [(opened)]="opened" mode="side">
-      <o-button (click)="opened=!opened" icon="menu" type="ICON" label=""
+<div #dialog mat-dialog-content class="dialog-container">
+  <mat-sidenav-container class="mat-sidenav-container" [class.opened]="opened" fxFill>
+    <mat-sidenav #sidenav [(opened)]="opened" mode="side" class="chart-on-demand-sidenav">
+      <o-button (click)="change()" icon="menu" type="ICON" label=""
         [matTooltip]="(sidenav.opened?'CHART_ON_DEMAND.HIDE_FILTERS':'CHART_ON_DEMAND.SHOW_FILTERS') | oChartTranslate">
       </o-button>
-      <o-form #formChart attr="formChartOnDemand" editable-detail="no" show-header="no">
+      <o-form #formChart attr="formChartOnDemand" editable-detail="no" show-header="no" query-on-init="false">
         <o-text-input attr="title" label="{{ 'CHART_ON_DEMAND.CHART_TITLE' | oChartTranslate }}" [data]="currentPreference.title" read-only="no"
           appearance="legacy" (onValueChange)="refreshTitle($event)">
         </o-text-input>
         <o-text-input attr="subtitle" label="{{ 'CHART_ON_DEMAND.CHART_SUBTITLE' | oChartTranslate }}" [data]="currentPreference.subtitle"
           read-only="no" appearance="legacy" (onValueChange)="refreshSubtitle($event)">
         </o-text-input>
+        <span class="section-title">{{ 'CHART_ON_DEMAND.CHART_TYPE' | oChartTranslate }}</span>
+        <mat-radio-group name="chartType" [(ngModel)]="currentPreference.selectedTypeChart" fxLayout="column" fxLayoutGap="12px">
+          <mat-radio-button *ngFor="let type of types" name="chartType" [value]="type.key"
+            [checked]="currentPreference.selectedTypeChart === type.key" (change)="captureTypeChart($event)">
+            {{ type.value | oChartTranslate}}
+          </mat-radio-button>
+        </mat-radio-group>
         <span class="section-title">{{ 'CHART_ON_DEMAND.X_AXIS' | oChartTranslate }}</span>
         <o-combo #comboXAxis attr="comboXAxis" label="{{'CHART_ON_DEMAND.SELECT_X_AXIS' | oChartTranslate}}" [data]="currentPreference.selectedXAxis"
-          read-only="no" filter="yes" translate="yes" columns="key;value" visible-columns="value" value-column="value" appearance="legacy"
-          (onValueChange)="captureValueXAxis($event)">
+          read-only="no" filter="yes" translate="yes" columns="key;value" null-selection="false" visible-columns="value" value-column="value"
+          appearance="legacy" (onValueChange)="captureValueXAxis($event)">
         </o-combo>
-        <o-combo #DataTypeXAxis attr="DataTypeXAxis" label="{{'CHART_ON_DEMAND.SELECT_DATA_TYPE_X' | oChartTranslate}}"
+        <!-- <o-combo #DataTypeXAxis attr="DataTypeXAxis" label="{{'CHART_ON_DEMAND.SELECT_DATA_TYPE_X' | oChartTranslate}}"
           [data]="currentPreference.selectedXAxisType" read-only="no" filter="yes" class="form-field" translate="yes"
           [static-data]="getArrayDataType()" value-column="key" columns="key;value;f" visible-columns="value" appearance="legacy"
-          (onValueChange)="captureValueComboDataTypeXAxis($event)"></o-combo>
+          (onValueChange)="captureValueComboDataTypeXAxis($event)"></o-combo> -->
         <span class="section-title">{{ 'CHART_ON_DEMAND.Y_AXIS' | oChartTranslate }}</span>
         <o-combo #comboYAxis attr="comboYAxis" label="{{'CHART_ON_DEMAND.SELECT_Y_AXIS' | oChartTranslate}}" [data]="currentPreference.selectedYAxis"
           read-only="no" filter="yes" class="form-field" multiple="yes" columns="key;value" visible-columns="value" value-column="value"
           (onChange)="captureValueYAxis($event)" appearance="legacy" translate="yes"></o-combo>
-        <o-combo #DataTypeYAxis attr="DataTypeYAxis" label="{{'CHART_ON_DEMAND.SELECT_DATA_TYPE_Y' | oChartTranslate}}"
+        <!-- <o-combo #DataTypeYAxis attr="DataTypeYAxis" label="{{'CHART_ON_DEMAND.SELECT_DATA_TYPE_Y' | oChartTranslate}}"
           [data]="currentPreference.selectedYAxisType" read-only="no" filter="yes" class="form-field" translate="yes"
           [static-data]="getArrayDataType()" value-column="key" columns="key;value;f" visible-columns="value" appearance="legacy"
-          (onValueChange)="captureValueComboDataTypeYAxis($event)"></o-combo>
-        <span class="section-title">{{ 'CHART_ON_DEMAND.CHART_TYPE' | oChartTranslate }}</span>
-        <o-radio attr="chartType" label="" [static-data]="getDataArrayRadioGraphics()" value-column="key" value="1" columns="key;value"
-          visible-columns="value" read-only="no" (onValueChange)="captureTypeChart($event)" appearance="legacy" translate="yes"
-          [data]="currentPreference.selectedTypeChart"></o-radio>
+          (onValueChange)="captureValueComboDataTypeYAxis($event)"></o-combo> -->
+        <span class="section-title">{{ 'CHART_ON_DEMAND.CHART_DATA_TYPE' | oChartTranslate }}</span>
+        <mat-radio-group name="DataType" [(ngModel)]="currentPreference.selectedDataTypeChart" fxLayout="column" fxLayoutGap="12px">
+          <mat-radio-button *ngFor="let dataType of dataTypes" name="DataType" [value]="dataType.key"
+            [checked]="currentPreference.selectedDataTypeChart === dataType.key">
+            {{ dataType.value | oChartTranslate}}
+          </mat-radio-button>
+        </mat-radio-group>
+        <div mat-dialog-actions fxLayout="row" fxLayoutAlign="center center" *ngIf="opened">
+          <button type="button" mat-stroked-button class="chart-clear-button" (click)="clearCurrentPreferences()">
+            {{'CHART_ON_DEMAND.CLEAR' | oChartTranslate }}</button>
+          <button type="button" mat-stroked-button class="mat-primary" (click)="showChart()" [disabled]="!enabledPreview()">
+            {{'CHART_ON_DEMAND.PREVIEW' | oChartTranslate }}</button>
+        </div>
       </o-form>
     </mat-sidenav>
     <mat-sidenav-content>
-      <div class="sidenav-container-content" [ngClass]="{'opened' : opened}" fxLayout="column" fxFlex>
+      <div class="sidenav-container-content">
         <o-column id="sidenav-container-content" fxFlex class="title-sidenav-content">
 
           <o-column *ngIf="showPlaceholder" fxFlex class="image-placeholder">
+            <ng-lottie height="95%" class="lottie" [options]="options"></ng-lottie>
           </o-column>
 
           <o-column *ngIf="!showPlaceholder">
             <h2 class="title">{{currentPreference.title}}</h2>
             <h5 class="subtitle">{{currentPreference.subtitle}}</h5>
           </o-column>
-          <o-row [style.display]="!showLineChart ? 'none' : 'inherit'">
-            <o-chart #lineChartBasic fxFlex type="line" [chart-parameters]="chartParametersLineChart" query-on-bind="no" query-on-init="no"
-              layout-padding class="chart">
-            </o-chart>
-          </o-row>
-
-          <o-row [style.display]="!showMultiBarChart ? 'none' : 'inherit'">
-            <o-chart #multiBar fxFlex type="multiBar" layout-fill query-on-bind="no" [chart-parameters]="chartParametersMultiBarChart"></o-chart>
-          </o-row>
-
-          <o-row [style.display]="!showAreaChart ? 'none' : 'inherit'">
-            <o-chart #stackedAreaChart type="stackedAreaChart" [chart-parameters]="chartParametersAreaChart" query-on-bind="no" fxFlex>
-            </o-chart>
-          </o-row>
-
-          <o-row [style.display]="!showPieChart ? 'none' : 'inherit'">
-            <o-chart #pieChart layout-fill type="pie" fxFlex [chart-parameters]="chartParametersPieChart" query-on-bind="no" vertical-scroll="yes">
+          <o-row *ngIf="!showPlaceholder">
+            <o-chart #chart fxFlex type="currentPreference.selectedTypeChart" [chart-parameters]="chartParameters" query-on-bind="no"
+              query-on-init="no" layout-padding class="chart">
             </o-chart>
           </o-row>
         </o-column>
