--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
@@ -1,12 +1,6 @@
 .o-dialog-class .mat-dialog-container .mat-dialog-content {
-  max-height: calc(100% - 100px);
+  max-height: calc(100% - 82px);
   height: 100%;
-  overflow: hidden;
-
-  .mat-sidenav-container {
-    background-color: transparent;
-    transition: all 0.5s;
-  }
 
   .mat-sidenav-graphic-gui {
     background-color: #ffffff;
@@ -15,41 +9,27 @@
     box-shadow: 0px 2px 4px #00000029;
   }
 
-  .title-sidenav-content {
-    background-color: white;
-  }
-
-  .sidenav-container-content {
-    //background-color: #ffffff;
-    border-radius: 4px;
-    border: 1px solid #dddddd;
-    box-shadow: 0px 2px 4px #00000029;
-    height: 100%;
-    margin-left: 0px;
-
-    .title {
-      margin-left: 60px;
-      margin-bottom: 4px;
-    }
-
-    .subtitle {
-      margin-top: 0;
-      margin-left: 60px;
-    }
-
-    &.opened {
-      margin-left: 24px;
-    }
-  }
-
-
   .mat-sidenav {
-    min-width: 10%;
     left: 16px;
     top: 8px;
     visibility: visible !important;
     z-index: 999;
     border: 0;
+
+
+
+    .mat-dialog-actions {
+      min-height: auto;
+
+      button.chart-clear-button {
+        min-width: 80px;
+      }
+    }
+
+    .mat-radio-group {
+      font-size: 14px;
+      margin: 12px 12px 0;
+    }
 
     .o-form {
       display: none;
@@ -83,62 +63,66 @@
     }
   }
 
-  .mat-sidenav-content {
-    z-index: 9;
-  }
 
-  .dialog-title {
-    position: relative;
-    border-bottom: 1px solid #1464a5;
+  .mat-sidenav-container {
+    background-color: transparent;
 
-    h2 {
-      font-size: 16px;
-    }
+    border: 1px solid transparent;
+    border-radius: 4px;
 
-    .main-menu {
-      position: absolute;
-      top: -5px;
-      right: 0;
+    &.opened {
+      border: 1px solid transparent;
+      border-radius: 4px;
 
-      button {
-        margin-left: 18px;
-        height: 19px;
-        width: 19px;
-        line-height: 19px;
+      .title-sidenav-content {
+        border: 1px solid transparent;
+        border-radius: 4px;
+      }
 
-        .mat-icon {
-          height: 19px;
-          width: 19px;
+      .sidenav-container-content {
+        margin-left: 24px;
+
+        .title-sidenav-content {
+          border: 1px solid transparent;
+          border-radius: 4px;
         }
       }
-
-      .active {
-        color: #1464a5;
-      }
     }
   }
 
-  .dialog-content {
-    height: 100%;
-    max-height: calc(100% - 77px);
+  .title-sidenav-content {
+    border: 1px solid transparent;
+    border-radius: 4px;
+  }
+
+  .mat-sidenav-content {
+    overflow: hidden;
+
+    .sidenav-container-content {
+      margin-left: 66px;
+      height: 100%;
+      border-radius: 4px;
+      border: 1px solid #dddddd;
 
 
-    .mat-sidenav-container {
-      flex: none;
-
-      svg {
-        margin: 24px;
-        width: calc(100% - 48px);
-        height: calc(100% - 48px);
-        max-width: 750px;
-        position: relative;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+      .title {
+        margin-left: 60px;
+        margin-bottom: 4px;
       }
 
-
-
+      .subtitle {
+        margin-top: 0;
+        margin-left: 60px;
+      }
+      .lottie{
+        height: 100%;
+      }
     }
+
   }
+
+}
+
+.chart_title {
+  margin: 0
 }
