--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
@@ -1,9 +1,12 @@
 <div mat-dialog-title class="dialog-title" fxLayout="row" fxLayoutAlign="space-between center">
-  <h2 class="chart_title">{{ 'CHART_ON_DEMAND.CHART_ON_DEMAND_TITLE' | oChartTranslate }}</h2>
+  {{ 'CHART_ON_DEMAND.CHART_ON_DEMAND_TITLE' | oChartTranslate }}
   <div>
-    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="settings dialog" (click)="showConfigurationMenu()">
-      <mat-icon>settings</mat-icon>
-    </button>
+    <mat-icon svgIcon="ontimize:settings" #configurationMenuButton [matMenuTriggerFor]="menu" (click)="showConfigurationMenu()"></mat-icon>
+    <mat-icon aria-label="fullscreen dialog" (click)="setFullscreenDialog()">
+      <ng-container *ngIf="fullscreen">fullscreen_exit</ng-container>
+      <ng-container *ngIf="!fullscreen">fullscreen</ng-container>
+    </mat-icon>
+    <mat-icon svgIcon="ontimize:close" [mat-dialog-close]="true"></mat-icon>
     <mat-menu #menu="matMenu" class="o-mat-menu">
       <button mat-menu-item [disabled]="!appliedConfiguration" (click)="updatePreferences()">
         <span>{{ 'CHART_ON_DEMAND.SAVE_CONFIGURATION_BUTTON' | oChartTranslate }}</span>
@@ -18,59 +21,65 @@
         <span>{{ 'CHART_ON_DEMAND.EXPORT_BUTTON' | oChartTranslate }}</span>
       </button>
     </mat-menu>
-    <button mat-icon-button aria-label="fullscreen dialog" (click)="setFullscreenDialog()">
-      <mat-icon *ngIf="fullscreen">fullscreen_exit</mat-icon>
-      <mat-icon *ngIf="!fullscreen">fullscreen</mat-icon>
-    </button>
-    <button mat-icon-button aria-label="close dialog" mat-dialog-close>
-      <mat-icon>close</mat-icon>
-    </button>
   </div>
 </div>
 
 <div #dialog mat-dialog-content class="dialog-container">
   <mat-sidenav-container class="mat-sidenav-container" [class.opened]="opened" fxFill>
     <mat-sidenav #sidenav [(opened)]="opened" mode="side" class="chart-on-demand-sidenav">
-      <o-button o-button (click)="opened=!opened" icon="menu" type="ICON" label=""
-        [matTooltip]="(sidenav.opened?'CHART_ON_DEMAND.HIDE_FILTERS':'CHART_ON_DEMAND.SHOW_FILTERS') | oChartTranslate">
-      </o-button>
-      <o-form #formChart attr="formChartOnDemand" editable-detail="no" show-header="no" query-on-init="false">
-        <o-text-input attr="title" label="{{ 'CHART_ON_DEMAND.CHART_TITLE' | oChartTranslate }}" [data]="currentPreference.title" read-only="no"
-          appearance="legacy" (onValueChange)="refreshTitle($event)">
-        </o-text-input>
-        <o-text-input attr="subtitle" label="{{ 'CHART_ON_DEMAND.CHART_SUBTITLE' | oChartTranslate }}" [data]="currentPreference.subtitle"
-          read-only="no" appearance="legacy" (onValueChange)="refreshSubtitle($event)">
-        </o-text-input>
-        <span class="section-title">{{ 'CHART_ON_DEMAND.CHART_TYPE' | oChartTranslate }}</span>
-        <mat-radio-group name="chartType" [(ngModel)]="currentPreference.selectedTypeChart" fxLayout="column" fxLayoutGap="12px">
-          <mat-radio-button *ngFor="let type of types" name="chartType" [value]="type.key"
-            [checked]="currentPreference.selectedTypeChart === type.key" (change)="captureTypeChart($event)">
-            {{ type.value | oChartTranslate}}
-          </mat-radio-button>
-        </mat-radio-group>
-        <span class="section-title">{{ 'CHART_ON_DEMAND.X_AXIS' | oChartTranslate }}</span>
-        <o-combo #comboXAxis attr="comboXAxis" label="{{'CHART_ON_DEMAND.SELECT_X_AXIS' | oChartTranslate}}" [data]="currentPreference.selectedXAxis"
-          read-only="no" filter="yes" translate="yes" columns="key;value" null-selection="false" visible-columns="value" value-column="value"
-          appearance="legacy" (onValueChange)="captureValueXAxis($event)">
-        </o-combo>
-        <span class="section-title">{{ 'CHART_ON_DEMAND.Y_AXIS' | oChartTranslate }}</span>
-        <o-combo #comboYAxis attr="comboYAxis" label="{{'CHART_ON_DEMAND.SELECT_Y_AXIS' | oChartTranslate}}" [data]="currentPreference.selectedYAxis"
-          read-only="no" filter="yes" class="form-field" multiple="yes" columns="key;value" visible-columns="value" value-column="value"
-          (onChange)="captureValueYAxis($event)" appearance="legacy" translate="yes"></o-combo>
-        <span class="section-title">{{ 'CHART_ON_DEMAND.CHART_DATA_TYPE' | oChartTranslate }}</span>
-        <mat-radio-group name="DataType" [(ngModel)]="currentPreference.selectedDataTypeChart" fxLayout="column" fxLayoutGap="12px">
-          <mat-radio-button *ngFor="let dataType of dataTypes" name="DataType" [value]="dataType.key"
-            [checked]="currentPreference.selectedDataTypeChart === dataType.key">
-            {{ dataType.value | oChartTranslate}}
-          </mat-radio-button>
-        </mat-radio-group>
+      <div fxLayout="column" fxFill>
+        <o-button o-button (click)="opened=!opened" icon="menu" type="ICON" label=""
+          [matTooltip]="(sidenav.opened?'CHART_ON_DEMAND.HIDE_FILTERS':'CHART_ON_DEMAND.SHOW_FILTERS') | oChartTranslate">
+        </o-button>
+        <div fxLayout="column" *ngIf="opened" class="container-title" fxLayoutGap="10px">
+          <mat-form-field>
+            <input [(ngModel)]="currentPreference.title" matInput placeholder="{{ 'CHART_ON_DEMAND.CHART_TITLE' | oChartTranslate }}">
+          </mat-form-field>
+          <mat-form-field>
+            <input [(ngModel)]="currentPreference.subtitle" matInput placeholder="{{ 'CHART_ON_DEMAND.CHART_SUBTITLE' | oChartTranslate }}">
+          </mat-form-field>
+        </div>
+        <div fxLayout="column" *ngIf="opened" class="data_options" fxLayoutGap="10px">
+          <span class="section-first-title">{{ 'CHART_ON_DEMAND.CHART_TYPE' | oChartTranslate }}</span>
+          <mat-radio-group name="chartType" [(ngModel)]="currentPreference.selectedTypeChart" fxLayout="column" fxLayoutGap="12px">
+            <mat-radio-button *ngFor="let type of types" name="chartType" [value]="type.key"
+              [checked]="currentPreference.selectedTypeChart === type.key" (change)="captureTypeChart($event)">
+              {{ type.value | oChartTranslate}}
+            </mat-radio-button>
+          </mat-radio-group>
+          <span class="section-title">{{ 'CHART_ON_DEMAND.X_AXIS' | oChartTranslate }}</span>
+          <mat-form-field>
+            <mat-label>{{'CHART_ON_DEMAND.SELECT_X_AXIS' | oChartTranslate}}</mat-label>
+            <mat-select [(ngModel)]="currentPreference.selectedXAxis" (selectionChange)="captureValueXAxis($event)">
+              <mat-option *ngFor="let option of comboData" [value]="option.value">
+                {{option.value | oTranslate}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <span class="section-title">{{ 'CHART_ON_DEMAND.Y_AXIS' | oChartTranslate }}</span>
+          <mat-form-field>
+            <mat-label>{{'CHART_ON_DEMAND.SELECT_Y_AXIS' | oChartTranslate}}</mat-label>
+            <mat-select [(ngModel)]="currentPreference.selectedYAxis" (selectionChange)="captureValueYAxis($event)" multiple>
+              <mat-option *ngFor="let option of comboData" [value]="option.value">
+                {{option.value | oTranslate}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <span class="section-title">{{ 'CHART_ON_DEMAND.CHART_DATA_TYPE' | oChartTranslate }}</span>
+          <mat-radio-group name="DataType" [(ngModel)]="currentPreference.selectedDataTypeChart" fxLayout="column" fxLayoutGap="12px">
+            <mat-radio-button *ngFor="let dataType of dataTypes" name="DataType" [value]="dataType.key"
+              [checked]="currentPreference.selectedDataTypeChart === dataType.key">
+              {{ dataType.value | oChartTranslate}}
+            </mat-radio-button>
+          </mat-radio-group>
+        </div>
         <div mat-dialog-actions fxLayout="row" fxLayoutAlign="center center" *ngIf="opened">
           <button type="button" mat-stroked-button class="chart-clear-button" (click)="clearCurrentPreferences()">
             {{'CHART_ON_DEMAND.CLEAR' | oChartTranslate }}</button>
           <button type="button" mat-stroked-button class="mat-primary" (click)="showChart()" [disabled]="!enabledPreview()">
             {{'CHART_ON_DEMAND.PREVIEW' | oChartTranslate }}</button>
         </div>
-      </o-form>
+      </div>
     </mat-sidenav>
     <mat-sidenav-content>
       <div class="sidenav-container-content">
@@ -85,7 +94,8 @@
             <h5 class="subtitle">{{currentPreference.subtitle}}</h5>
           </o-column>
           <o-row fxFlex [style.display]="showPlaceholder ? 'none' : 'inherit'">
-            <o-chart #chart fxFlex type="currentPreference.selectedTypeChart" [chart-parameters]="chartParameters" query-on-bind="no" query-on-init="no" layout-padding class="chart">
+            <o-chart #chart fxFlex type="currentPreference.selectedTypeChart" [chart-parameters]="chartParameters" query-on-bind="no"
+              query-on-init="no" layout-padding class="chart">
             </o-chart>
           </o-row>
         </o-column>
