Fix some errors

--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
@@ -59,7 +59,7 @@
           <span class="section-title">{{ 'CHART_ON_DEMAND.Y_AXIS' | oChartTranslate }}</span>
           <mat-form-field>
             <mat-label>{{'CHART_ON_DEMAND.SELECT_Y_AXIS' | oChartTranslate}}</mat-label>
-            <mat-select [(ngModel)]="currentPreference.selectedYAxis" (selectionChange)="captureValueYAxis($event)" multiple>
+            <mat-select [(ngModel)]="currentPreference.selectedYAxis[0]" (selectionChange)="captureValueYAxis($event)">
               <mat-option *ngFor="let option of comboData" [value]="option.value">
                 {{option.value | oTranslate}}
               </mat-option>
