--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
@@ -83,22 +83,17 @@
     </mat-sidenav>
     <mat-sidenav-content>
       <div class="sidenav-container-content">
-        <o-column id="sidenav-container-content" fxFlex class="title-sidenav-content">
-
-          <o-column *ngIf="showPlaceholder" fxFlex class="image-placeholder">
-            <ng-lottie height="95%" class="lottie" [options]="options"></ng-lottie>
-          </o-column>
-
-          <o-column *ngIf="!showPlaceholder">
+        <div fxLayout="column" id="sidenav-container-content" fxFlex class="title-sidenav-content">
+          <ng-lottie height="95%" class="lottie" [options]="options" *ngIf="showPlaceholder" fxFlex></ng-lottie>
+          <div fxLayout="column" fxLayoutAlign="start start" *ngIf="!showPlaceholder">
             <h2 class="title">{{currentPreference.title}}</h2>
             <h5 class="subtitle">{{currentPreference.subtitle}}</h5>
-          </o-column>
-          <o-row fxFlex [style.display]="showPlaceholder ? 'none' : 'inherit'">
-            <o-chart #chart fxFlex type="currentPreference.selectedTypeChart" query-on-bind="no"
-              query-on-init="no" layout-padding class="chart">
+          </div>
+          <div fxLayout="row" fxLayoutAlign="start start" fxFlex [style.display]="showPlaceholder ? 'none' : 'inherit'">
+            <o-chart #chart fxFlex type="currentPreference.selectedTypeChart" query-on-bind="no" query-on-init="no" layout-padding class="chart">
             </o-chart>
-          </o-row>
-        </o-column>
+          </div>
+        </div>
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
