modified multiBarChart, copyfiles and mat-icon

--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
@@ -52,7 +52,7 @@
             <mat-label>{{'CHART_ON_DEMAND.SELECT_PALETTE' | oChartTranslate}}</mat-label>
             <mat-select [(ngModel)]="currentPreference.selectedPalette" (selectionChange)="captureValuePalette($event)">
               <mat-option *ngFor="let option of comboPalette" [value]="option.colors">
-                {{option.value | oChartTranslate}}
+                <mat-icon style="width:100%" svgIcon="ontimize:{{option.value}}"></mat-icon>
               </mat-option>
             </mat-select>
           </mat-form-field>
