--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
@@ -50,7 +50,10 @@
           <span class="section-title">{{ 'CHART_ON_DEMAND.PALETTE' | oChartTranslate }}</span>
           <mat-form-field>
             <mat-label>{{'CHART_ON_DEMAND.SELECT_PALETTE' | oChartTranslate}}</mat-label>
-            <mat-select [(ngModel)]="currentPreference.selectedPalette" (selectionChange)="captureValuePalette($event)">
+            <mat-select [(ngModel)]="currentPreference.selectedPalette" panelClass="custom-panel" (selectionChange)="captureValuePalette($event)">
+              <mat-select-trigger *ngIf="currentPreference.selectedPalette">
+                <mat-icon style="width:100%" [svgIcon]="getPaletteIcon()"></mat-icon>
+              </mat-select-trigger>
               <mat-option *ngFor="let option of comboPalette" [value]="option.colors">
                 <mat-icon style="width:100%" svgIcon="ontimize:{{option.value}}"></mat-icon>
               </mat-option>
