--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
@@ -29,7 +29,7 @@
         overflow-y: scroll;
         margin-top: 10px;
         margin-bottom: 0;
-
+        padding-right: 10px;
 
         .o-form .scrolling {
           height: 100%;
