Fixed svg errors (#113)
* fixed error in package.json

* added colors to all chart types

* modified select-panel width

* deleted code smell

* modified copy-files

* deleted panel class

* modified svg styles

--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
@@ -51,8 +51,11 @@
           <mat-form-field>
             <mat-label>{{'CHART_ON_DEMAND.SELECT_PALETTE' | oChartTranslate}}</mat-label>
             <mat-select [(ngModel)]="currentPreference.selectedPalette" (selectionChange)="captureValuePalette($event)">
+              <mat-select-trigger *ngIf="currentPreference.selectedPalette">
+                <mat-icon class="palette_icon" [svgIcon]="getPaletteIcon()"></mat-icon>
+              </mat-select-trigger>
               <mat-option *ngFor="let option of comboPalette" [value]="option.colors">
-                <mat-icon style="width:100%" svgIcon="ontimize:{{option.value}}"></mat-icon>
+                <mat-icon class="palette_icon" svgIcon="ontimize:{{option.value}}"></mat-icon>
               </mat-option>
             </mat-select>
           </mat-form-field>
