adapted the pie, donut and bar charts

--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart/o-chart.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart/o-chart.component.html
@@ -1,5 +1,14 @@
 <div fxLayout="row" layout-padding fxLayoutAlign="center center">
-    <nvd3 #nvChart fxFlexFill [options]="options" [data]="getAdaptData()" config="{visible: true, extended: true}"
-        (onTap)="tapChart($event)" (onDoubleTap)="doubleTapChart($event)" (onPress)="pressChart($event)" 
-        (onSwipe)="swipeChart($event)" (onRotate)="rotateChart($event)" (onPinch)="pinchChart($event)"></nvd3>
+  <ng-container [ngSwitch]="type">
+    <ngx-charts-pie-chart *ngSwitchCase="'pie'" fxFlexFill class="chart" [view]="[400, 300]" [results]="getAdaptData()" [legend]="false"
+      [labels]="true" [explodeSlices]="false" [doughnut]="false" [gradient]="true"></ngx-charts-pie-chart>
+    <ngx-charts-pie-chart *ngSwitchCase="'donutChart'" fxFlexFill class="chart" [view]="[400, 300]" [results]="getAdaptData()" [legend]="false"
+      [labels]="true" [explodeSlices]="false" [doughnut]="true" [gradient]="true"></ngx-charts-pie-chart>
+
+    <ngx-charts-line-chart *ngSwitchCase="'line'" [view]="[400, 300]" [results]="getAdaptData()">
+    </ngx-charts-line-chart>
+
+    <ngx-charts-bar-horizontal *ngSwitchCase="'multiBarHorizontalChart'" [xAxisLabel]="xAxisLabel" [view]="[300, 300]" [yAxisLabel]="yAxisLabel"
+      [gradient]="true" [xAxis]="true" [yAxis]="true" [results]="getAdaptData()"></ngx-charts-bar-horizontal>
+  </ng-container>
 </div>
